@@ -1,3 +1,4 @@
 ( diff -u /dev/null commitHelper;  diff -u /dev/null PATCHSETS;  ) > 1.0.1cvs1.patchset
 ( cvs diff -u -r 1.1.2.10 -r 1.1.2.11 configure.ac;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/Makefile.am;  cvs diff -u -r 1.1.2.9 -r 1.1.2.10 src/att_remover.c;  cvs diff -u -r -1.1.2.1 -r -1.1.2.2 src/plugin_version.h.in;  cvs diff -u -r 1.1.2.2 -r 1.1.2.3 src/.cvsignore;  ) > 1.0.1cvs2.patchset
 ( cvs diff -u -r 1.1.2.12 -r 1.1.2.13 configure.ac;  ) > 1.0.2cvs1.patchset
+( cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/att_remover.c;  ) > 1.0.2cvs2.patchset
