@@ -1,3 +1,8 @@
+2006-08-27 [colin]	1.0.2cvs2
+
+	* src/att_remover.c
+		Implement plugin_provides()
+
 2006-08-18 [paul]	1.0.2cvs1
 
 	* configure.ac
